compiler/testData/diagnostics/testsWithStdLib/annotations/jvmStatic/localFun.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE
fun main(args: Array<String>) {
    <!JVM_STATIC_NOT_IN_OBJECT_OR_CLASS_COMPANION!>@JvmStatic fun a()<!>{

    }
}